<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="se.app.picabattle.ScoreBoard">

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="You vs Opponent"
        android:gravity="center"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/round_one"/>
    <TextView
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/round_two"/>
    <TextView
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/round_three"/>
    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/round_four"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/round_five"/>
    <TextView
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/round_six"/>
    <TextView
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:background="@drawable/plain_white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/round_seven"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginLeft="150dp"
            android:background="@drawable/btn"
            android:text="@string/play"
            android:id="@+id/play"/>
        <Button
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/btn"
            android:text="@string/friend"
            android:id="@+id/friend"/>
        </RelativeLayout>




</LinearLayout>


